[add] ajustes de coreccion de titulo y ajuste de un select2

--- a/src/app/compartidos/comprobacion-components/carga-comprobante-nacional/carga-comprobante-nacional.component.css
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-nacional/carga-comprobante-nacional.component.css
@@ -12,3 +12,8 @@
     height: 28px;
     position: relative;
 }
+
+.select2-container {
+  border: 2px solid ;
+  border-color: rgb(185, 74, 72) !important;
+}
