--- a/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
+++ b/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
@@ -25,7 +25,7 @@
             <td>{{ item.razon_social }} </td>
             <td>{{item.concepto_gasto}} </td>
             <td>{{item.moneda}} </td>
-            <td>{{item.importe_reembolso}} </td>
+            <td>{{item.monto_rembolsar}} </td>
             <td class="align-middle">
               <div style="white-space: nowrap">
                 <a *ngIf="item.file !== '' " class="btn ml-2"> <i class="far fa-file-code" style="font-size:15px"></i>
