--- a/src/app/modulos/complemento-pago/list-complemento-pago-rci/list-complemento-pago-rci.component.html
+++ b/src/app/modulos/complemento-pago/list-complemento-pago-rci/list-complemento-pago-rci.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-12 col-lg-12 col-xl-12">
     <div class="panel panel-inverse">
       <div class="panel-heading">
-        <h4 class="panel-title">Lista de Notas de Crédito </h4>
+        <h4 class="panel-title">Lista de Complementos de pago </h4>
       </div>
       <div class="panel-body table-responsive">
         <table id="tabla_complemento_pagos" datatable [dtOptions]="dtOptions"
