--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
@@ -42,7 +42,7 @@
               <td>{{ item.nombre_usuario}}</td>
               <td>{{ item.folio_comprobacion}}</td>
               <td>{{ item.descripcion}}</td>
-              <td>{{ item.fecha_creacion | date: 'yyyy-MM-dd' }}</td>
+              <td>{{ item.fecha_creacion| date: 'yyyy-MM-dd' }}</td>
               <td>{{ item.motivo}}</td>
               <td>{{ item.monto_reembolsar | currency: '$'}}</td>
               <td>{{ item.nombre_moneda}}</td>
@@ -54,7 +54,7 @@
                   <a class="btn btn-danger text-white btn ml-2" (click)="eliminar(item.folio_comprobacion)">
                     <i class="far fa-trash-alt"> </i> Borrador
                   </a>
-                  <button class="btn btn-primary text-white btn ml-2" (click)="editarBorrador(item.id)">
+                  <button class="btn btn-primary text-white btn ml-2" (click)="editarBorrador(item.folio_comprobacion)">
                     Editar
                   </button>
                 </div>
