--- a/src/app/modulos/comprobaciones-gastos/caja_chica/caja-chica-form/caja-chica-form.component.html
+++ b/src/app/modulos/comprobaciones-gastos/caja_chica/caja-chica-form/caja-chica-form.component.html
@@ -1,7 +1,5 @@
 <app-form-comprobacion-header (onContinuar)="guardarFormHeader($event)" (onCancelar)="cancelar()"
-  [lista_contribuyente]="lista_contribuyentes" [lista_moneda]="lista_monedas"
-  [lista_centro_costos]="lista_centros_costo" [numero_comprobacion]="numero_comprobacion"
-  [comprobacion_header]="comprobacion_header" [usuario]="usuario">
+  [numero_comprobacion]="numero_comprobacion" [comprobacion_header]="comprobacion_header" [usuario]="usuario">
 </app-form-comprobacion-header>
 
 <!-- Carga de Documentos -->
