ajustes comprobacion de gastos se ajusto el textarea el selec2 forma de pago

--- a/src/app/compartidos/comprobacion-components/carga-comprobante-nacional/carga-comprobante-nacional.component.css
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-nacional/carga-comprobante-nacional.component.css
@@ -13,7 +13,7 @@
     position: relative;
 }
 
-.select2-container {
+/* .select2-container {
   border: 2px solid ;
   border-color: rgb(185, 74, 72) !important;
-}
+} */
