--- a/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
@@ -62,8 +62,8 @@
               (keyup)="cambiarEstatusTotalModificado()">
           </th>
           <th class="text-right" scope="">
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" maxlength="500"
-              name="linea_detalle" formControlName="observacion" style="width: 150px !important;"></textarea>
+            <textarea class="form-control" id="exampleFormControlTextarea1" row="1" maxlength="500" name="linea_detalle"
+              formControlName="observacion" style="width: 150px !important; max-height: 250px !important;"></textarea>
           </th>
           <th class="text-center" scope="">
             <input type="checkbox" class="mx-auto" formControlName="comprobante_fiscal">
