--- a/src/app/compartidos/comprobacion-components/tabla-conceptos-form/tabla-conceptos-form.component.html
+++ b/src/app/compartidos/comprobacion-components/tabla-conceptos-form/tabla-conceptos-form.component.html
@@ -54,8 +54,8 @@
               type="text" name="linea_detalle" maxlength="20" class="form-control">
           </th>
           <th class="text-right" scope="">
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" maxlength="500"
-              name="linea_detalle" formControlName="observacion" style="width: 150px !important;"></textarea>
+            <textarea class="form-control" id="exampleFormControlTextarea1" row="1" maxlength="500" name="linea_detalle"
+              formControlName="observacion" style="width: 150px !important; max-height: 250px !important;"></textarea>
           </th>
           <th class="text-center" scope="">
             <input type="checkbox" class="mx-auto" formControlName="comprobante_fiscal">
