--- a/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
+++ b/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
@@ -18,10 +18,16 @@
 
       <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
         <label for="cnetro_costos">Centro de Costos <span class="requerido">*</span> </label>
-        <select2 [data]="lista_centros_costo" [cssImport]=true [value]="centro_costo_value"
+        <!-- <select2 [data]="lista_centros_costo" [cssImport]=true [value]="centro_costo_value"
           [options]="{placeholder: 'Seleccione un Centro de Costo'}" class="left" [disabled]="true"
           (valueChanged)="onCECOSelected($event)" name="centro_costos" id="cnetro_costos">
-        </select2>
+        </select2> -->
+        <select class="form-control" formControlName="centro_costos" name="corporativo"
+          [(ngModel)]="header_comprobante.identificador_cc">
+          <option *ngFor="let item of lista_centros_costo"
+            [attr.selected]="item.identificador ==  header_comprobante.identificador_cc ? true : null ">{{
+            item.centro_consumo }}</option>
+        </select>
       </div>
 
       <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
@@ -64,7 +70,7 @@
     <div class="col  text-right ">
       <button *ngIf="!numero_comprobacion" type="button" (click)="cancelarComprobacion()"
         class="btn btn-danger ml-auto mr-2">Cancelar</button>
-      <button [disabled]="!formulario_header.valid || numero_comprobacion" type="submit"
+      <button [disabled]="(!formulario_header.valid || numero_comprobacion) &&  !header_comprobante.id" type="submit"
         class="btn btn-primary ml-auto">Continuar</button>
     </div>
   </div>
