--- a/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
+++ b/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
@@ -36,7 +36,7 @@
               </div>
             </td>
             <td class="align-middle">
-              <i style="font-size:15px" class="far fa-file-alt btn m-2"></i>
+              <i style="font-size:15px" class="far fa-file-alt btn m-2" (click)="modal(item.conceptos)"></i>
             </td>
             <td class="align-middle">
               <em style="font-size:15px" class="fas fa-trash" (click)="eliminarConcepto(i)"></em>
@@ -84,3 +84,6 @@
     </div>
   </div>
 </div>
+
+<!-- Modal Conceptos Comprobantes -->
+<app-modal-conceptos-comprobantes [conceptos]="concepto"></app-modal-conceptos-comprobantes>
