[add] eliminar comprobante en compro GV

--- a/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
@@ -22,7 +22,7 @@
     <div class="col-md-3">
       <label for="nombre_proveedor">Nombre Proveedor <span class="requerido">*</span></label>
       <input type="text" name="nombre_proveedor" id="nombre_proveedor'" maxlength="100" class="form-control"
-        formControlName="nombre_proveedor" placeholder="Nombre Proveedor">
+        formControlName="razon_social" placeholder="Nombre Proveedor">
     </div>
     <div class="col-md-3">
       <label for="nombre">Fecha Comprobante <span class="requerido">*</span></label>
