--- a/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
@@ -13,14 +13,14 @@
       <caption style="display: none;"></caption>
       <thead>
         <tr>
-          <th scope="col">Descripción</th>
+          <th scope="col" style="width: 150px;">Descripción</th>
           <th scope="col">Unidad</th>
           <th scope="col">Valor Unitario</th>
           <th scope="col">Cantidad</th>
           <th scope="col">Importe</th>
           <th style="width: 250px;" scope="col">Concepto</th>
           <th scope="col">Monto a Reembolsar</th>
-          <th style="width: 250px;" scope="col">Observación</th>
+          <th style="width: 150px;" scope="col">Observación</th>
           <th scope="col">Comprobante Fiscal</th>
           <th scope="col">Impuestos</th>
           <th scope="col">Anexos</th>
@@ -31,8 +31,7 @@
       <tbody>
         <tr>
           <th scope="">
-            <input formControlName="descripcion" type="text" name="descripcion" maxlength="250" class="form-control"
-              style="width: 100px !important;">
+            <input formControlName="concepto" type="text" name="concepto" maxlength="250" class="form-control w-100">
           </th>
           <th scope="">
             <input formControlName="unidad" type="text" name="unidad" maxlength="50" class="form-control">
