--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-form/gastos-viajes-form.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-form/gastos-viajes-form.component.html
@@ -32,7 +32,7 @@
 </app-carga-comprobante-extranjero>
 
 <app-lista-comprobantes-carga *ngIf="numero_comprobacion" [lista_comprobaciones]="lista_comprobantes"
-  [numero_comprobacion]="numero_comprobacion" [totales]="totales" (eliminarComprobante)="eliminarComprobante($event)"
+  [numero_comprobacion]="numero_comprobacion" [totales]="totales" (onEliminarComprobante)="eliminarComprobante($event)"
   (onCancelar)="cancelar()" (onComprobar)="comprobar()" (onEliminarComprobacion)="eliminarComprobacion()">
 </app-lista-comprobantes-carga>
 
